--- a/homework_3/style.css
+++ b/homework_3/style.css
@@ -7,58 +7,52 @@
   
   .black {
     float: left;
-    width: 60px;
-    height: 60px;
+    width: 70px;
+    height: 70px;
     background-color: black;
-    font-size: 60px;
-    text-align: center;
-    vertical-align: middle;
-    /* border: 1px solid black; */
   }
   
   .white {
     float: left;
-    width: 60px;
-    height: 60px;
+    width: 70px;
+    height: 70px;
     background-color:white;
-    font-size: 60px;
-    text-align: center;
-    vertical-align: middle;
+  }
+  .corner {
+    float: left;
+    width: 20px;
+    height: 20px;
   }
   
   .top-line {
     float: left;
-    width: 60px;
-    height: 60px;
+    width: 70px;
+    height: 20px;
     font-size: 20px;
     text-align: center;
-    vertical-align: middle;
     transform: rotate(180deg);
   }
   
   .bottom-line {
     float: left;
-    width: 60px;
-    height: 60px;
+    width: 70px;
+    height: 20px;
     font-size: 20px;
     text-align: center;
-    vertical-align: middle;
-  }
+}
   .left-line {
     float: left;
-    width: 60px;
-    height: 60px;
+    width: 20px;
+    height: 70px;
     font-size: 20px;
     text-align: center;
-    vertical-align: middle;
   }
   .right-line {
     float: left;
-    width: 60px;
-    height: 60px;
+    width: 20px;
+    height: 70px;
     font-size: 20px;
     text-align: center;
-    vertical-align: middle;
     transform: rotate(180deg);
   }
   
